@@ -52,7 +52,15 @@ to this list, please email your suggestions to gramps-devel@lists.sf.net
 21. Why can I not add/remove/edit columns to the lists in People View 
     and Family View?
 
-22. I found a bug and I want it fixed right now! What do I do?
+22. I would like to contribute to GRAMPS by writing my favorite report.
+    How do I do that?
+
+23. I found a bug and I want it fixed right now! What do I do?
+
+24. It is obvious that GRAMPS absolutely needs to become a (client-server/
+web-based/PHP/weblog/Javascript/C++/distributed/KDE/Motif/Tcl/Win32/C#/
+You-name-it) application.
+    When is this going to happen?
 
 
 **** Questions and answers ****
@@ -244,7 +252,29 @@ Once the patch is committed and incorporated into pygtk, we will add the
 ability to add/remove/edit sortable columns.
 
 
-22. I found a bug and I want it fixed right now! What do I do?
+22. I would like to contribute to GRAMPS by writing my favorite report.
+    How do I do that?
+
+The easiest way to contribute to reports, filters, tools, etc. is to copy 
+an existing GRAMPS report, filter, or tool. If you can create what you want 
+by modifying existing code -- great! If your idea does not fit into the logic
+of any existing GRAMPS tool, the following page may provide some help in 
+writing your own plugin from scratch:
+http://gramps.sourceforge.net/phpwiki/index.php/GrampsDevelopersPage
+If you need more help or would like to discuss your idea with us, please 
+do not hesitate to contact us at gramps-devel@lists.sf.net
+
+To test your work in progress, you may save your plugin under
+$HOME/.gramps/plugins directory and it should be found and imported on startup. 
+The correctly written plugin will register itself with GRAMPS, create menu 
+item, and so on.
+
+If you are happy with your plugin and would like to contribute your code 
+back to the GRAMPS project, you are very welcome to do so by contacting us 
+at gramps-devel@lists.sf.net
+
+
+23. I found a bug and I want it fixed right now! What do I do?
 
 The best thing you can do is to fix the bug and send the patch to
 gramps-devel@lists.sf.net :-)
@@ -266,15 +296,39 @@ A good bug report would include:
 
 Most problems can be fixed quickly provided there is enough information. 
 To ensure this, please follow up on your bug reports. In particular, if you 
-file bug report with sf.net bug tracker, PLEASE log into sf.net before filing 
-(register your free account if you don't have one). Then we will have a way 
-of contacting you should we need more information. If you choose to file your 
-report anonymously, at least check every so often whether your report page 
-has something new posted, as it probably would.
+file a bug report with sf.net bug tracker, PLEASE log into sf.net before 
+filing (register your free account if you don't have one). Then we will have 
+a way of contacting you should we need more information. If you still choose 
+to file your report anonymously, at least check every so often whether your 
+report page has something new posted, as it probably would.
 
-If the above explanations seem vague, please follow this link
+If the above explanations seem vague, please follow this link:
 http://www.chiark.greenend.org.uk/~sgtatham/bugs.html
 
+
+24. It is obvious that GRAMPS absolutely needs to become a (client-server/
+    web-based/PHP/weblog/Javascript/C++/distributed/KDE/Motif/Tcl/Win32/
+    C#/You-name-it) application.
+    
+    When is this going to happen?
+
+The surest way to see it happen is to get it done by yourself. Since
+GRAMPS is free/open source, nobody prevents you from taking all of the
+code and continuing its development in whatever direction you see fit.
+In doing so, you may consider giving your new project another name to
+avoid confusion with the continuing GRAMPS development. If you would
+like the GRAMPS project to provide advice, expertise, filters, etc., 
+we will gladly cooperate with your new project, to ensure compatability 
+or import/export options to your new format of a project.
+                                                                                
+If, however, you would like the GRAMPS project to to adopt your strategy,
+you would need to convince GRAMPS developers that your strategy is good
+for GRAMPS and superior to the present development strategy.
+                                                                                
+HINT: if GRAMPS developers are still not convinced after about three
+messages sent to gramps-devel, maybe you are better off on your own
+rather than with a company of retards who can't fully realize the
+potential of your great idea :-)
 
 **** End of GRAMPS Frequently Asked Questions ****
 
